--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "mathjslab-calculator",
   "version": "0.0.1",
   "description": "MathJSLab Calculator - Interpreter with language syntax like MATLAB/Octave",
-  "private": true,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sergiolindau/calculator.git"
+    "url": "git+https://github.com/sergiolindau/mathjslab-calculator.git"
   },
   "keywords": [
     "MathJSLab",
@@ -22,9 +21,9 @@
   "author": "Sergio Lindau <sergiolindau@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sergiolindau/calculator/issues"
+    "url": "https://github.com/sergiolindau/mathjslab-calculator/issues"
   },
-  "homepage": "https://github.com/sergiolindau/calculator#readme",
+  "homepage": "https://github.com/sergiolindau/mathjslab-calculator#readme",
   "scripts": {
     "git:add:all": "git add .",
     "git:commit:initial": "git commit -m \"Initial Commit\"",
@@ -34,11 +33,9 @@
     "lint": "eslint \"**/*.ts{,x}\" --fix",
     "format": "prettier --write \"**/*.ts\"",
     "format:lint": "npm run format && npm run lint",
-    "tscbuild": "tsc -p tsconfig.build.json",
     "build:dev": "webpack-dev-server --mode development",
     "build:prod": "webpack --mode production",
-    "clean": "rimraf dist",
-    "test:decimal": "ts-node-dev --respawn --transpile-only test/decimal-test.ts"
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "basic-dom-helper": "file:../basic-dom-helper",
@@ -47,7 +44,6 @@
   "devDependencies": {
     "@types/node": "^20.5.0",
     "@types/webpack": "^5.28.1",
-    "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.47.0",
@@ -58,13 +54,9 @@
     "lint-staged": "^14.0.0",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
-    "sass": "^1.65.1",
-    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
