--- a/package.json
+++ b/package.json
@@ -33,18 +33,22 @@
     "lint": "eslint \"**/*.ts{,x}\" --fix",
     "format": "prettier --write \"**/*.ts\"",
     "format:lint": "npm run format && npm run lint",
+    "assets": "mkdirp dist && mkdirp dist/example && cpx ./example/*.* dist/example/",
+    "prebuild:dev": "npm run assets",
     "build:dev": "webpack-dev-server --mode development",
+    "prebuild:prod": "npm run assets",
     "build:prod": "webpack --mode production",
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "basic-dom-helper": "^1.0.4",
-    "mathjslab": "^1.0.5"
+    "basic-dom-helper": "^1.0.6",
+    "mathjslab": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "cpx": "^1.5.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
@@ -52,6 +56,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
     "lint-staged": "^14.0.0",
+    "mkdirp": "^3.0.1",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
     "style-loader": "^3.3.3",
