--- a/package.json
+++ b/package.json
@@ -33,22 +33,21 @@
     "lint": "eslint \"**/*.ts{,x}\" --fix",
     "format": "prettier --write \"**/*.ts\"",
     "format:lint": "npm run format && npm run lint",
-    "assets": "mkdirp dist && mkdirp dist/example && cpx ./example/*.* dist/example/",
-    "prebuild:dev": "npm run assets",
+    "example-json": "node util/build-example-json.js",
+    "prebuild:dev": "npm run example-json",
     "build:dev": "webpack-dev-server --mode development",
-    "prebuild:prod": "npm run assets",
+    "prebuild:prod": "npm run example-json",
     "build:prod": "webpack --mode production",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist src/example.json"
   },
   "dependencies": {
-    "basic-dom-helper": "^1.0.6",
-    "mathjslab": "^1.0.7"
+    "basic-dom-helper": "file:../basic-dom-helper",
+    "mathjslab": "file:../mathjslab"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "cpx": "^1.5.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
@@ -56,7 +55,6 @@
     "eslint-plugin-prettier": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
     "lint-staged": "^14.0.0",
-    "mkdirp": "^3.0.1",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
     "style-loader": "^3.3.3",
