--- a/package.json
+++ b/package.json
@@ -41,26 +41,26 @@
     "clean": "rimraf dist src/example.json"
   },
   "dependencies": {
-    "basic-dom-helper": "^1.0.6",
-    "mathjslab": "^1.0.8"
+    "basic-dom-helper": "file:../basic-dom-helper",
+    "mathjslab": "file:../mathjslab"
   },
   "devDependencies": {
-    "@types/node": "^20.5.0",
-    "@types/webpack": "^5.28.1",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@types/node": "^20.5.9",
+    "@types/webpack": "^5.28.2",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
     "css-loader": "^6.8.1",
-    "eslint": "^8.47.0",
+    "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
-    "lint-staged": "^14.0.0",
-    "prettier": "^3.0.1",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
