--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "clean": "rimraf dist src/example.json"
   },
   "dependencies": {
-    "basic-dom-helper": "file:../basic-dom-helper",
-    "mathjslab": "file:../mathjslab"
+    "basic-dom-helper": "^1.0.6",
+    "mathjslab": "^1.0.9"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
