--- a/package.json
+++ b/package.json
@@ -38,18 +38,18 @@
     "build:dev": "webpack-dev-server --mode development",
     "prebuild:prod": "npm run example-json",
     "build:prod": "webpack --mode production",
-    "clean": "rimraf dist src/example.json"
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "basic-dom-helper": "^1.0.6",
     "mathjslab": "^1.0.12"
   },
   "devDependencies": {
-    "@types/node": "^20.5.9",
+    "@types/node": "^20.6.0",
     "@types/webpack": "^5.28.2",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
     "css-loader": "^6.8.1",
-    "eslint": "^8.48.0",
+    "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
