--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build:dev": "webpack-dev-server --mode development",
     "prebuild:prod": "npm run example-json",
     "build:prod": "webpack --mode production",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist src/first-example.json"
   },
   "dependencies": {
     "basic-dom-helper": "^1.0.6",
