--- a/package.json
+++ b/package.json
@@ -37,16 +37,16 @@
     "lint": "eslint \"**/*.ts{,x}\" --fix",
     "format": "prettier --write \"**/*.ts\"",
     "format:lint": "npm run format && npm run lint",
-    "example-json": "node util/build-example-json.js",
-    "prebuild:dev": "npm run example-json",
+    "assets": "node util/build-assets.js",
+    "prebuild:dev": "npm run assets",
     "build:dev": "webpack-dev-server --mode development",
-    "prebuild:prod": "npm run example-json",
+    "prebuild:prod": "npm run assets",
     "build:prod": "webpack --mode production",
     "clean": "rimraf dist src/first-example.json"
   },
   "dependencies": {
-    "basic-dom-helper": "^1.0.6",
-    "mathjslab": "^1.0.13"
+    "basic-dom-helper": "file:../basic-dom-helper",
+    "mathjslab": "file:../mathjslab"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
