--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "format": "prettier --write \"**/*.ts\"",
     "format:lint": "npm run format && npm run lint",
     "assets": "node util/build-assets.js",
+    "bundle": "node util/save-bundle.js",
     "prebuild:dev": "npm run assets",
+    "postbuild:dev": "npm run bundle",
     "build:dev": "webpack-dev-server --mode development",
     "prebuild:prod": "npm run assets",
+    "postbuild:prod": "npm run bundle",
     "build:prod": "webpack --mode production",
-    "clean": "rimraf dist src/first-example.json"
+    "clean": "rimraf dist src/first-example.json mathjslab-calc.min.js"
   },
   "dependencies": {
     "basic-dom-helper": "^1.0.6",
