--- a/package.json
+++ b/package.json
@@ -38,24 +38,24 @@
     "lint": "eslint \"**/*.ts{,x}\" --fix",
     "format": "prettier --write \"**/*.ts\"",
     "format:lint": "npm run format && npm run lint",
+    "build-configuration": "node util/build-configuration",
     "assets": "node util/build-assets.js",
     "bundle": "node util/save-bundle.js",
-    "prebuild:dev": "npm run assets",
-    "postbuild:dev": "npm run bundle",
+    "prebuild:dev": "npm run build-configuration && npm run assets",
     "build:dev": "webpack-dev-server --mode development",
-    "prebuild:prod": "npm run assets",
+    "prebuild:prod": "npm run build-configuration && npm run assets",
     "postbuild:prod": "npm run bundle",
     "build:prod": "webpack --mode production",
-    "clean": "rimraf dist src/first-example.json mathjslab-calc.min.js"
+    "clean": "rimraf dist src/first-example.json src/build-configuration.json mathjslab-calc.min.js"
   },
   "dependencies": {
     "basic-dom-helper": "^1.0.6",
     "mathjslab": "^1.0.21"
   },
   "devDependencies": {
-    "@types/node": "^20.6.5",
-    "@types/webpack": "^5.28.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@types/node": "^20.8.0",
+    "@types/webpack": "^5.28.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
@@ -64,7 +64,7 @@
     "html-webpack-plugin": "^5.5.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
-    "rimraf": "^5.0.1",
+    "rimraf": "^5.0.5",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
