--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "assets": "node util/build-assets.js",
     "bundle": "node util/save-bundle.js",
     "prebuild:dev": "npm run build-configuration && npm run assets",
-    "build:dev": "webpack-dev-server --mode development",
+    "build:dev": "set MODE_ENV=development && webpack-dev-server --mode development",
     "prebuild:prod": "npm run build-configuration && npm run assets",
     "postbuild:prod": "npm run bundle",
-    "build:prod": "webpack --mode production",
+    "build:prod": "set MODE_ENV=production && webpack --mode production",
     "clean": "rimraf dist src/first-example.json src/build-configuration.json mathjslab-calc.min.js"
   },
   "dependencies": {
