--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "bundle": "node util/save-bundle.js",
     "prebuild:dev": "npm run build-configuration && npm run assets",
     "build:dev": "set MODE_ENV=development && webpack-dev-server --mode development",
-    "prebuild:prod": "npm run build-configuration && npm run assets",
+    "prebuild:debug": "set DEBUG=true && npm run build-configuration && npm run assets",
+    "build:debug": "set MODE_ENV=development && webpack-dev-server --mode development",
+    "prebuild:prod": "npm run prebuild:dev",
     "build:prod": "set MODE_ENV=production && webpack --mode production",
     "postbuild:prod": "npm run bundle",
     "build": "npm run build:prod",
@@ -51,14 +53,14 @@
   },
   "dependencies": {
     "basic-dom-helper": "^1.0.6",
-    "mathjslab": "^1.1.2"
+    "mathjslab": "^1.1.3"
   },
   "devDependencies": {
-    "@types/node": "^20.8.2",
+    "@types/node": "^20.8.3",
     "@types/webpack": "^5.28.3",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "css-loader": "^6.8.1",
-    "eslint": "^8.50.0",
+    "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
@@ -67,7 +69,7 @@
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "style-loader": "^3.3.3",
-    "ts-loader": "^9.4.4",
+    "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
