--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
     "git:commit": "git commit -m \"Initial Commit\"",
     "git:push": "git push",
     "git:add:commit:push": "npm run git:add && npm run git:commit && npm run git:push",
-    "npm:publish": "npm publish --access public",
-    "add:commit:push:publish": "npm run git:add:commit:push && npm run npm:publish",
     "lint": "eslint \"**/*.ts{,x}\" --fix",
     "format": "prettier --write \"**/*.ts\"",
     "format:lint": "npm run format && npm run lint",
@@ -52,7 +50,7 @@
     "build:prod": "set MODE_ENV=production && webpack --mode production",
     "postbuild:prod": "npm run bundle",
     "build": "npm run build:prod",
-    "do:all": "npm run clean && npm run update && npm run format:lint && npm run build:prod && npm run add:commit:push:publish"
+    "do:all": "npm run clean && npm run update && npm run format:lint && npm run build:prod && npm run git:add:commit:push"
   },
   "dependencies": {
     "basic-dom-helper": "^1.0.9",
