--- a/.editorconfig
+++ b/.editorconfig
@@ -3,9 +3,9 @@
 # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
+# Windows-style newlines with a newline ending every file
 [*]
-end_of_line = lf
+end_of_line = crlf
 insert_final_newline = true
 trim_trailing_whitespace = true
 charset = utf-8
@@ -14,5 +14,9 @@ indent_size = 4
 
 # Matches the exact files either *.json or *.yml
 [*.{json,yml}]
+end_of_line = crlf
+insert_final_newline = true
+trim_trailing_whitespace = true
+charset = utf-8
 indent_style = space
 indent_size = 2
