--- a/package.json
+++ b/package.json
@@ -53,26 +53,26 @@
     "do:all": "npm run clean && npm run update && npm run format:lint && npm run build:prod && npm run git:add:commit:push"
   },
   "dependencies": {
-    "basic-dom-helper": "^1.0.9",
-    "mathjslab": "^1.2.4"
+    "basic-dom-helper": "file:../basic-dom-helper",
+    "mathjslab": "file:../mathjslab"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.10.4",
     "@types/webpack": "^5.28.5",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
     "css-loader": "^6.8.1",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "html-webpack-plugin": "^5.5.3",
-    "lint-staged": "^15.1.0",
+    "html-webpack-plugin": "^5.5.4",
+    "lint-staged": "^15.2.0",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
