--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
     "Octave",
     "MathML",
     "interpreter",
+    "lexer",
     "parser",
     "grammar",
-    "yacc",
-    "bison",
-    "lex",
-    "flex",
-    "jison"
+    "ANTLR"
   ],
   "author": "Sergio Lindau <sergiolindau@gmail.com>",
   "license": "MIT",
@@ -54,14 +51,14 @@
   },
   "dependencies": {
     "basic-dom-helper": "^1.0.9",
-    "mathjslab": "^1.3.1"
+    "mathjslab": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "css-loader": "^6.8.1",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.1",
