--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mathjslab-calculator",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "MathJSLab Calculator - An interpreter with language syntax like MATLAB®/Octave",
   "repository": {
     "type": "git",
@@ -54,8 +54,9 @@
     "mathjslab": "^1.5.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.4",
+    "@types/node": "^20.11.5",
     "@types/webpack": "^5.28.5",
+    "@types/wicg-file-system-access": "^2023.10.4",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "css-loader": "^6.9.0",
     "eslint": "^8.56.0",
@@ -65,7 +66,7 @@
     "html-webpack-plugin": "^5.6.0",
     "lint-staged": "^15.2.0",
     "mini-css-extract-plugin": "^2.7.7",
-    "prettier": "^3.2.2",
+    "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
