--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mathjslab-calculator",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "MathJSLab Calculator - An interpreter with language syntax like MATLAB®/Octave",
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/sergiolindau/mathjslab-calculator#readme",
   "scripts": {
     "clean": "rimraf dist src/first-example.json src/build-configuration.json mathjslab-calculator.min.js",
-    "update": "npx ncu -u && npm install",
+    "update": "npx ncu -u && npm install --legacy-peer-deps",
     "git:add": "git add .",
     "git:commit": "git commit -m \"Initial Commit\"",
     "git:push": "git push",
@@ -55,29 +55,31 @@
     "path": false
   },
   "devDependencies": {
-    "@types/node": "^20.11.7",
+    "@types/node": "^20.14.2",
+    "@types/plotly.js": "^2.29.5",
     "@types/webpack": "^5.28.5",
-    "@types/wicg-file-system-access": "^2023.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "css-loader": "^6.9.1",
-    "eslint": "^8.56.0",
+    "@types/wicg-file-system-access": "^2023.10.5",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "html-webpack-plugin": "^5.6.0",
-    "lint-staged": "^15.2.0",
-    "mini-css-extract-plugin": "^2.7.7",
-    "prettier": "^3.2.4",
-    "rimraf": "^5.0.5",
-    "style-loader": "^3.3.4",
+    "lint-staged": "^15.2.5",
+    "mini-css-extract-plugin": "^2.9.0",
+    "prettier": "^3.3.1",
+    "rimraf": "^5.0.7",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "webpack": "^5.90.0",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "mathjslab": "^1.5.7"
+    "mathjslab": "^1.5.8"
   }
 }
