--- a/package.json
+++ b/package.json
@@ -55,31 +55,32 @@
     "path": false
   },
   "devDependencies": {
-    "@types/node": "^20.14.2",
-    "@types/plotly.js": "^2.29.5",
+    "@types/node": "^22.5.5",
+    "@types/plotly.js": "^2.33.4",
     "@types/webpack": "^5.28.5",
     "@types/wicg-file-system-access": "^2023.10.5",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "ajv": "^8.17.1",
     "css-loader": "^7.1.2",
-    "eslint": "^9.4.0",
+    "eslint": "^9.11.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "html-webpack-plugin": "^5.6.0",
-    "lint-staged": "^15.2.5",
-    "mini-css-extract-plugin": "^2.9.0",
-    "prettier": "^3.3.1",
-    "rimraf": "^5.0.7",
+    "lint-staged": "^15.2.10",
+    "mini-css-extract-plugin": "^2.9.1",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "webpack": "^5.91.0",
+    "typescript": "^5.6.2",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
-    "mathjslab": "^1.5.9"
+    "mathjslab": "^1.5.10"
   }
 }
