--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mathjslab-calculator",
-  "version": "1.2.3",
-  "description": "MathJSLab Calculator - An interpreter with language syntax like MATLAB®/Octave",
+  "version": "1.2.4",
+  "description": "MathJSLab - An interpreter with language syntax like MATLAB®/Octave, ISBN 978-65-00-82338-7. A demo application from the mathjslab npm package, ISBN 978-65-00-84828-1.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sergiolindau/mathjslab-calculator.git"
@@ -27,7 +27,9 @@
   },
   "homepage": "https://mathjslab.com/",
   "scripts": {
+    "clean:package-lock": "node script/clean-package-lock.cjs",
     "clean": "rimraf dist src/first-example.json src/build-configuration.json mathjslab-calculator.min.js",
+    "clean:all": "npm run clean && npm run clean:package-lock",
     "update": "npx ncu -u && npm install",
     "git:add": "git add .",
     "git:commit": "git commit -m \"Initial Commit\"",
@@ -36,16 +38,17 @@
     "lint": "eslint \"**/*.ts{,x}\" --fix",
     "format": "prettier --write \"**/*.ts\"",
     "format:lint": "npm run format && npm run lint",
-    "build-configuration": "node util/build-configuration",
-    "assets": "node util/build-assets.js",
-    "bundle": "node util/save-bundle.js",
-    "prebuild:dev": "npm run build-configuration && npm run assets",
-    "build:dev": "set NODE_ENV=development && webpack-dev-server --mode development",
-    "prebuild:debug": "set DEBUG=true && npm run build-configuration && npm run assets",
-    "build:debug": "set NODE_ENV=development && webpack-dev-server --mode development",
+    "build-configuration": "node script/build-configuration.js",
+    "set-sitemap": "node script/set-sitemap.js",
+    "build-assets": "node script/build-assets.js",
+    "save-bundle": "node script/save-bundle.js",
+    "prebuild:dev": "npm run build-configuration && npm run set-sitemap && npm run build-assets",
+    "build:dev": "tsx --require tsconfig-paths/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --mode development",
+    "prebuild:debug": "set DEBUG=true && npm run build-configuration && npm run build-assets",
+    "build:debug": "tsx --require tsconfig-paths/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --mode development",
     "prebuild:prod": "npm run prebuild:dev",
-    "build:prod": "set NODE_ENV=production && webpack --mode production",
-    "postbuild:prod": "npm run bundle",
+    "build:prod": "tsx --require tsconfig-paths/register ./node_modules/webpack/bin/webpack --mode production",
+    "postbuild:prod": "npm run save-bundle",
     "build": "npm run build:prod",
     "do:all": "npm run clean && npm run update && npm run format:lint && npm run build:prod && npm run git:add:commit:push"
   },
@@ -55,7 +58,7 @@
     "path": false
   },
   "devDependencies": {
-    "@types/node": "^22.6.1",
+    "@types/node": "^22.7.4",
     "@types/plotly.js": "^2.33.4",
     "@types/webpack": "^5.28.5",
     "@types/wicg-file-system-access": "^2023.10.5",
@@ -74,13 +77,14 @@
     "rimraf": "^6.0.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.2",
-    "webpack": "^5.94.0",
+    "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
-    "mathjslab": "^1.5.11"
+    "mathjslab": "^1.5.12"
   }
 }
