--- a/package.json
+++ b/package.json
@@ -59,17 +59,21 @@
     "path": false
   },
   "devDependencies": {
+    "@types/dotenv-webpack": "^7.0.7",
     "@types/node": "^22.7.4",
     "@types/plotly.js": "^2.33.4",
     "@types/webpack": "^5.28.5",
     "@types/wicg-file-system-access": "^2023.10.5",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "ajv": "^8.17.1",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "html-webpack-plugin": "^5.6.0",
     "lint-staged": "^15.2.10",
